--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Qingkai Ma's Journey in Cybersecurity
+description: this blog is to keep track of things I tried in cybersecurity
